# Project-Adam-20-1

./: .env.dev  .env.example  .env.prod  .gitignore  .replit  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DEV_PROD_GUIDE.md  Dockerfile.gateway  EXECUTIVE_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MOBILE_PROJECT_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  README.md  budget_app.db  budget_buddy_v2.db  cookies.txt  database.py  dev_server.py  docker-compose.production.yml  docker-compose.yml  gateway.py  logging_config.py  main.py  main_dev.py  main_prod.py  pyproject.toml  requirements.lock.txt  requirements.txt  requirements_clean.txt  resilience.py  run.py  run_dev.ps1  run_prod.bat  run_prod.ps1  settings.py  simple_test.py  start_all_services.ps1  (+1 more)
_archive/: README_old.md  debug_login.json  debug_register.json  gateway.py  gateway_backup.py  gateway_clean.py  gateway_enhanced.py  prod_server.py  requirements_original.txt  run_gateway.py  test_dev_server.py  test_routes.py
ai/: __init__.py  routes.py  routes_backup.py
app/: __init__.py  routes.py
auth/: __init__.py  auth_utils.py  database.py  dependencies.py  models.py  routes.py
common/: __init__.py  api_gateway.py  app_factory.py  budget_templates_enhanced.py  config.py  database_v2.py  routes.py
database/: budget_assistant.db  budget_buddy_v2.db  database_schema_v2.sql  schema.sql
docs/: ARCHITECTURAL_REVIEW.md  BROWSER_AUTH_SOLUTION.md  ENHANCED_TEMPLATES_SUMMARY.md  FIXES_SUMMARY.md  GOALS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LOGIN_FIX_VERIFICATION.md  (+5 more)
(+117 files in other folders)
